[Connectivity Report] Fixed crash if signalStrengths is empty.

BUG: 449276